--- a/webServer/public/index.html
+++ b/webServer/public/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1> 여기는 index.html입니다</h1>
 
-    <button type=""button><a href = ./login.html>로그인</a></button>
+    <button><a href = ./login2.html>로그인</a></button>
 </body>
 </html>
