--- a/sunnydirectery/public/index.html
+++ b/sunnydirectery/public/index.html
@@ -46,8 +46,8 @@
   <body>
       <!--제목-->
     <div style="margin-top:30px; margin-bottom: 30px;"  align="center">
-      <font color="blue" size="5">Bootstrap를 이용한 페이지</font>
-      <button type="button" class="btn btn-outline-primary btn-sm">&nbsp;<a href="login2.html" data-toggle="popover" data-trigger="hover" data-content="로그린후 사용하세요" >리뷰 달기</a></button>
+      <font color="blue" size="5">sooyeon's Website</font>
+      <button type="button" class="btn btn-outline-primary btn-sm">&nbsp;<a href="login2.html" data-toggle="popover" data-trigger="hover" data-content="로그인후 사용하세요" >리뷰 달기</a></button>
     </div>
       <!--메뉴버튼-->
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
@@ -81,9 +81,9 @@
             <font size=3>Photo of me:</font>
 <!--             <img src="imgs/flower.jpg" alt="John Doe" class="mr-3 mt-3 Thumbnail" top-magrin: style="width:290px;" > -->
             <img src="imgs/icon4(180180).png" alt="John Doe" class="mr-3 mt-3 Thumbnail" top-magrin: style="width:150px;" >
-            <h5>윤선희</h5>
-            메일 정보: <a href="mailto:shyoon63@gmail.com">
-            shyoon63@gmail.com</a>.<p>
+            <h5>임수연</h5>
+            메일 정보: <a href="mailto:s2129@e-mirim.hs.kr">
+              s2129@e-mirim.hs.kr</a><p>
             <p><p>
             <h2>나의 작품</h2>
             <font size=3>프로그램을 추가하여 보세요</font>
