--- a/sunnydirectery/public/photomulti_link.html
+++ b/sunnydirectery/public/photomulti_link.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>파일업로드 테스트</title>
-<meta name="viewport" content="width=device-width, height-device-height, initial-scale=1"> <link rel="apple-touch-icon" sizes="180x180" href="img/logo.png" />
-<link rel="icon" type="image/png" href="img/logo.png" sizes="192x192"/>
+<meta name="viewport" content="width=device-width, height-device-height, initial-scale=1"> <link rel="apple-touch-icon" sizes="180x180" href="imgs/logo.png" />
+<link rel="icon" type="image/png" href="imgs/logo.png" sizes="192x192"/>
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
