--- a/sunnydirectery/public/404.html
+++ b/sunnydirectery/public/404.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>에러 페이지</title>
 <meta name="viewport" content="width=device-width, height-device-height, initial-scale=1">
-<link rel="apple-touch-icon" sizes="180x180" href="img/logo.png"/>
-<link rel="icon" type="image/png" href="img/logo.png" sizes="192x192"/>
+<link rel="apple-touch-icon" sizes="180x180" href="imgs/logo.png"/>
+<link rel="icon" type="image/png" href="imgs/logo.png" sizes="192x192"/>
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 
@@ -19,7 +19,7 @@
 <body>
 <div class="container">
 <div class="card">
-<div class="card-header"> <img src=../public/img/404_icon.png width=40px height=40px> <font size=5>오류 <a href="/"></a></font></div> 
+<div class="card-header"> <img src=../public/imgs/404_icon.png width=40px height=40px> <font size=5>오류 <a href="/"></a></font></div> 
 <div class="card-body">요청하신 웹문서를 찾을 수 없습니다.</div>
 <div class="card-footer">웹문서가 있는지 확인하세요.  <a href="/"> <i class="fa fa-window-close" style="font-size:30px;color:orange"></a></i> </div>
 </div>
