--- a/sunnydirectery/public/index.html
+++ b/sunnydirectery/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-    <title>임수연_Bootstrap을 이용한 포트폴리오 만들기</title>
+    <title>임수연의 session사용</title>
 
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
@@ -46,9 +46,9 @@
   <body>
       <!--제목-->
     <div style="margin-top:30px; margin-bottom: 30px;"  align="center">
-      <font color="blue" size="5">sooyeon's Website</font>
-      <button type="button" class="btn btn-outline-primary btn-sm">&nbsp;<a href="login2.html" data-toggle="popover" data-trigger="hover" data-content="로그인후 사용하세요" >리뷰 달기</a></button>
-    </div>
+      <h1><font color="blue" size="5">sooyeon's Website</font>
+        <button type="button" class="btn btn-outline-primary btn-sm">&nbsp;<a href="login2.html" data-toggle="popover" data-trigger="hover" data-content="로그인후 사용하세요" >리뷰 달기</a></button>
+     </h1> </div>
       <!--메뉴버튼-->
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
     <a class="navbar-brand" href="index.html" data-toggle="popover" data-trigger="hover" data-content="초기화면입니다">홈</a>
@@ -80,7 +80,7 @@
             <h2>About Me</h2>
             <font size=3>Photo of me:</font>
 <!--             <img src="imgs/flower.jpg" alt="John Doe" class="mr-3 mt-3 Thumbnail" top-magrin: style="width:290px;" > -->
-            <img src="imgs/icon4(180180).png" alt="John Doe" class="mr-3 mt-3 Thumbnail" top-magrin: style="width:150px;" >
+            <img src="imgs/shay.png" alt="sooyeon" class="mr-3 mt-3 Thumbnail" top-magrin: style="width:150px;" >
             <h5>임수연</h5>
             메일 정보: <a href="mailto:s2129@e-mirim.hs.kr">
               s2129@e-mirim.hs.kr</a><p>
@@ -97,10 +97,6 @@
               <li class="nav-item">
               <a class="dropdown-item" href="video.html" data-toggle="popover"  data-content="비디오가 실행됩니다">비디오실행</a>
               </li>
-              <!-- <li class="nav-item">
-              <a class="dropdown-item" href="jquery1/jquery1_width.html" data-toggle="popover"  data-content="jquery로 작성되었고 좋아하는 사진으로 바꾸어보세요">사진이동</a>
-              </li> -->
-
               <li class="nav-item">
                 <a class="dropdown-item" href="jquery1/jquery1.html" data-toggle="popover" data-content="jquery로 작성되었고 좋아하는 사진으로 바꾸어보세요">사진이동</a>
               </li>
@@ -108,38 +104,19 @@
               <li class="nav-item">
               <a class="dropdown-item" href="jquery2/sunny.html" data-toggle="popover"  data-content="jquery로 작성된 달력입니다">달력</a>
               </li>
-              <!-- <li class="nav-item">
-                <a class="dropdown-item" href="6slide/slide.html" data-toggle="popover"  data-content="css로 작성되었고 좋아하는 사진을 선택하여보세요">사진선택</a>
-              </li> -->
-              <!-- <li class="nav-item">
-              <a class="dropdown-item" href="map1/m_myLoc.html" data-toggle="popover"  data-content="jquery mobile를 이용한 위치추적기 입니다">위치추적기-jquery</a>        
-              </li>
-              <li class="nav-item">
-              <a class="dropdown-item" href="map2/m_myLoc.html" data-toggle="popover" data-content="bootstrap를 이용한 위치추적기 입니다">위치추적기-boot</a>
-              </li>
-              <li class="nav-item">
-              <a class="dropdown-item" href="subway/subway.html" data-toggle="popover"  data-content="가까운 지하철 안내 입니다">가까운 지하철 안내</a>
-              </li>
-              <li class="nav-item">
-                  <a class="dropdown-item" href="parking/parking.html" data-toggle="popover"  data-content="가까운 주차장 안내 입니다">가까운 주차장 안내</a>
-              </li>
-              <li class="nav-item">
-                  <a class="dropdown-item" href="dust/index.html" data-toggle="popover"  data-content="실시간 기상지수 정보 안내 입니다">실시간 기상지수 정보 안내</a>
-              </li>
-              <li class="nav-item">
-                  <a class="dropdown-item" href="#" data-toggle="popover"  data-content="예제프로그램을 추가하세요">Disabled</a>
-              </li> -->
+            
             </ul>
           </div>
 
         <!--가운데 메뉴-->
           <div class="col-sm-4">
+            <div class="fakeimg">
               <h2>Counter</h2>
-              <font size=3>기준일 : 2023.12.31</font>
+              <font size=3>it쇼까지</font>
               <div class="cover">
                     <p>&nbsp;</p>
-                    <h4>COMING SOON</h4>
-                      <p id="count"></p>
+                    <h4>D-11</h4>
+                    </div>
               </div>
               <div class="fakeimg">
                 <p>하루의 시간 ..</p>
@@ -154,11 +131,32 @@
               </div>
 
               <div class="fakeimg">
+                네이버 바로가기
                 <a href="http://www.naver.com ">
-                <img src =imgs/house.webp style ="width: 200px; height: 200px;margin-left: 70px; margin-top:15px"></img>
+                <img src =imgs/naver.png style ="width: 200px; margin-top:15px"></img>
                 </a>
               </div>
-              <br>
+
+              <div class="fakeimg">
+                <h5>원어스 - 월하미인</h5>
+                시간 따라 흘러가리라
+                바람 따라 떠나간 너의 빈자리
+                너는 마치 홀로 피는 꽃
+                검은 구름아 저 달빛을 가려다오
+                한밤에 밤에 핀 눈부신 빛처럼
+                달빛에 반해 핀 하이얀 꽃처럼
+                한순간 사라진 하룻밤 꿈처럼
+                별 따라가다 십 리도 못 가라
+                한밤에 밤에 핀 눈부신 빛처럼
+                달빛에 반해 핀 하이얀 꽃처럼
+                한순간 사라진 하룻밤 꿈처럼
+                달 아래 너는 참 아름답구나
+              </div>
+
+              <h2>샤카샤카</h2>
+              <div class="fakeimg">
+                <img src =imgs/sing.png style ="margin-left: 80px; height: 200px; margin-top: 20px;"></img>
+              </div>
           </div>
 
         <!--오른쪽 메뉴-->
@@ -188,7 +186,29 @@
                   우리네 인생이에요.<br>
                   (이제민·시인)
                 </div>
-                <p>Some text..</p>
+
+                <br>
+                <h2>힐링을 해봅시다</h2>
+                <div class="fakeimg">
+                  <img src =imgs/kaza.png style ="margin-left: 80px; height: 200px; margin-top: 20px;"></img>
+                </div>
+                <br>
+                <h2>내일의 날씨 - 비</h2>
+                <div class="fakeimg">
+                  
+                  <img src =imgs/rain.png style ="width: 200px; margin-top:15px"></img>
+                </div>
+                <br>
+                <h2>미카 공주님</h2>
+                <div class="fakeimg">
+                  <img src =imgs/mika.png style ="margin-left: 80px; height: 200px; margin-top: 20px;"></img>
+                </div>
+
+                <div class="fakeimg">
+                  <h5>mbti - intj</h5>
+                  용의주도한 전략가, 과학자형
+전략가형 사람은 거의 모든 일에 의문을 던지고, 더 좋은 방법을 찾는 과정에서 거절당하거나 규칙을 깨는 일을 두려워하지 않는다. 또 단지 창의적인 데에서 그치지 않고 성취해내기를 원해, 새로운 아이디어에 통찰력과 뛰어난 논리력, 강한 의지를 더해 일을 추진한다.
+               </div>
           </div>
       </div>
     </div>
