--- a/DatabaseExample/public/adduser.html
+++ b/DatabaseExample/public/adduser.html
@@ -3,17 +3,33 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>사용자추가 테스트</title>
+    <title>로그인 성공</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script> 
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+<style>
+    h3{
+        margin: 10px;
+    }
+    form{
+        margin: 10px;
+    }
+</style>
+
 </head>
 
 <body>
-    <h1>사용자추가</h1>
+    <hr>
+    <h3>사용자추가</h3>
+    <hr>
     <br>
     <form method="post" action="/process/adduser">
 
         <table>
             <tr>
-                <td><label class="btn btn-info">아이디</label></td>
+                <td><label class="btn btn-info">아 이 디 </label></td>
                 <td><input type="text" name="id" /></td>
             </tr>
             <tr>
@@ -25,8 +41,10 @@
                 <td><input type="text" name="name" /></td>
             </tr>
         </table>
+        <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <input type="submit" value="전송" name="" class="btn btn-info"/>
-        <a href="/"class="btn btn-info"><button>메인페이지</button></a>
+        <a href="/"><button class="btn btn-info">메인페이지</button></a>
     </form>
 </body>
 
