--- a/DatabaseExample/public/loginfail.html
+++ b/DatabaseExample/public/loginfail.html
@@ -4,36 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>사용자 리스트 테스트</title>
+    <title>로그인 실패</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script> 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 <style>
     h3{
         margin: 10px;
     }
-    form{
-        margin: 10px;
-    }
+
 </style>
+
 </head>
 <body>
     <hr>
-    <h3>사용자 리스트</h3>
+    <h3>로그인 실패</h3>
     <hr>
-    <br>
-    <form method="post" action="/process/listuser">
-        <table>
-            <tr>
-                <td>
-                    <label>아래 [리스트] 버튼을 누르세요</label>
-                </td>
-            </tr>
-        </table>
-        <br>
-        <input type="submit" value="리스트" name="" class="btn btn-info"/>
-        <a href="/"><button class="btn btn-info">메인페이지</button></a>
-    </form>
+
+    <button><a href="/public/login.html" class="btn btn-info">다시로그인</a></button>
+    
+    <button><a href="/" class="btn btn-info">메인페이지</a></button>
+    
 </body>
 </html>
